--- a/config/email.yml
+++ b/config/email.yml
@@ -3,8 +3,8 @@ development:
   :port: 587
   :Domain: mail.google.com
   :authentication: plain
-  :user_name: priyanko.dey33@gmail.com
-  :password: priyanko123456
+  :user_name: ashish@thethinktech.com
+  :password: ashish@new123
   :enable_starttls_auto: true        
 
 production:
@@ -12,6 +12,6 @@ production:
   :port: 587
   :Domain: mail.google.com
   :authentication: plain
-  :user_name: priyanko.dey33@gmail.com
-  :password: priyanko123456
+  :user_name: ashish@thethinktech.com
+  :password: ashish@new123
   :enable_starttls_auto: true 
